feat: menu Page integration

--- a/La_note_enchantée.html
+++ b/La_note_enchantée.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ohmyfood - À la française</title>
+    <title>Ohmyfood - La note enchantée</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,13 +35,165 @@
         </a>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="banner">
+        <img
+          src="./Images/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+          alt="La note enchantée"
+        />
+      </div>
+      <section class="menu">
+        <div class="menu__container">
+          <div class="menu__header">
+            <h2>La note enchantée</h2>
+            <div class="menu__cardlike">
+              <i
+                class="fa-regular fa-heart fa-2xl menu__like"
+                aria-hidden="true"
+              ></i>
+              <i
+                class="fa-solid fa-heart fa-2xl menu__likehover"
+                aria-hidden="true"
+              ></i>
+            </div>
+          </div>
+        </div>
+        <div class="menu__listes">
+          <div class="menu__liste">
+            <h3>Entrées</h3>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Ravioles de foie gras</h4>
+                <p class="menu__cardsubtitle">
+                  Accompagnées de leur crème à la truffe
+                </p>
+              </div>
+              <span class="menu__cardprice">25€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Caviar osciètre</h4>
+                <p class="menu__cardsubtitle">
+                  Sur blini à la farine de blé noir
+                </p>
+              </div>
+              <span class="menu__cardprice">35€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Homard et espuma de potiron</h4>
+                <p class="menu__cardsubtitle">Marinés aux zestes d'orange</p>
+              </div>
+              <span class="menu__cardprice">20€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Foie gras de canard cuit entier</h4>
+                <p class="menu__cardsubtitle">
+                  Confiture de figue et pain toasté
+                </p>
+              </div>
+              <span class="menu__cardprice">35€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menu__liste">
+            <h3>Plats</h3>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Noix de coquilles Saint-Jacques</h4>
+                <p class="menu__cardsubtitle">
+                  Sur lit de purée de céleri-rave
+                </p>
+              </div>
+              <span class="menu__cardprice">40€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Langoustine poêlée</h4>
+                <p class="menu__cardsubtitle">Purée de patate douce</p>
+              </div>
+              <span class="menu__cardprice">35€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Mijoté de queue de bœuf</h4>
+                <p class="menu__cardsubtitle">
+                  Et riz sauvage aux zestes de citron
+                </p>
+              </div>
+              <span class="menu__cardprice">45€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menu__liste">
+            <h3>Desserts</h3>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Macaron noisette et chocolat</h4>
+                <p class="menu__cardsubtitle">
+                  Glace au caramel brun et sel de Guérande
+                </p>
+              </div>
+              <span class="menu__cardprice">18€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Baba au rhum revisité</h4>
+                <p class="menu__cardsubtitle">Avec son coulis de citron</p>
+              </div>
+              <span class="menu__cardprice">22€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Tarte au citron meringuée</h4>
+                <p class="menu__cardsubtitle">Déstructurée</p>
+              </div>
+              <span class="menu__cardprice">23€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="Commander">
+          <a href="#restaurants" class="recherche__button">
+            <span class="submittxt">Commander</span>
+          </a>
+        </div>
+      </section>
+    </main>
     <footer>
       <h2 class="footer__title">ohmyfood</h2>
       <div class="footer__link">
         <div class="footerlink__icon">
           <i class="fa-solid fa-utensils" style="color: #ffffff"></i>
-          <a href="#" class="footer__link__a">Proposer un restaurant</a>
+          <a href="#" class="footer__link__a">Porposer un restaurant</a>
         </div>
         <div class="footerlink__icon">
           <i class="fa-solid fa-handshake" style="color: #ffffff"></i>
