--- a/La_palette_du_gout.html
+++ b/La_palette_du_gout.html
@@ -35,7 +35,147 @@
         </a>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="banner">
+        <img
+          src="./Images/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+          alt="La palette du goût"
+        />
+      </div>
+      <section class="menu">
+        <div class="menu__container">
+          <div class="menu__header">
+            <h2>La palette du goût</h2>
+            <div class="menu__cardlike">
+              <i
+                class="fa-regular fa-heart fa-2xl menu__like"
+                aria-hidden="true"
+              ></i>
+              <i
+                class="fa-solid fa-heart fa-2xl menu__likehover"
+                aria-hidden="true"
+              ></i>
+            </div>
+          </div>
+        </div>
+        <div class="menu__listes">
+          <div class="menu__liste">
+            <h3>Entrées</h3>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Fricassée d'escargot</h4>
+                <p class="menu__cardsubtitle">Au piment d'espelette</p>
+              </div>
+              <span class="menu__cardprice">25€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Foie gras de canard mi-cuit</h4>
+                <p class="menu__cardsubtitle">Et ses copeaux de truffe noire</p>
+              </div>
+              <span class="menu__cardprice">35€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Œuf au plat</h4>
+                <p class="menu__cardsubtitle">
+                  Assaisonné à la truffe sur lit de caviar
+                </p>
+              </div>
+              <span class="menu__cardprice">20€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menu__liste">
+            <h3>Plats</h3>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Filet de bœuf aux herbes</h4>
+                <p class="menu__cardsubtitle">
+                  Accompagné de sa ribambelle de légumes
+                </p>
+              </div>
+              <span class="menu__cardprice">40€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Parmentier de queue de bœuf</h4>
+                <p class="menu__cardsubtitle">
+                  À la truffe noire sur sa purée de panais
+                </p>
+              </div>
+              <span class="menu__cardprice">35€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Filet de turbot</h4>
+                <p class="menu__cardsubtitle">Aux agrumes</p>
+              </div>
+              <span class="menu__cardprice">44€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menu__liste">
+            <h3>Desserts</h3>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Paris-Brest</h4>
+                <p class="menu__cardsubtitle">Revisité</p>
+              </div>
+              <span class="menu__cardprice">18€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Macaron au chocolat d'exception</h4>
+                <p class="menu__cardsubtitle">
+                  Et glace à la vanille de Madagascar
+                </p>
+              </div>
+              <span class="menu__cardprice">22€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Mousse au chocolat</h4>
+                <p class="menu__cardsubtitle">
+                  Au piment d'Espelette et à la truffe noire
+                </p>
+              </div>
+              <span class="menu__cardprice">23€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="Commander">
+          <a href="#restaurants" class="recherche__button">
+            <span class="submittxt">Commander</span>
+          </a>
+        </div>
+      </section>
+    </main>
     <footer>
       <h2 class="footer__title">ohmyfood</h2>
       <div class="footer__link">
