--- a/Le_délice_des_sens.html
+++ b/Le_délice_des_sens.html
@@ -27,15 +27,153 @@
           <i class="fa-solid fa-arrow-left fa-lg" style="color: #5d5e5f"></i>
         </a>
         <a href="index.html" class="header__logo">
-          <img
-            src="Images/images/logo/ohmyfood@2x.svg"
-            alt="logo ohmyfood"
-            class="header__logo"
-          />
+          <h1>
+            <img
+              src="Images/images/logo/ohmyfood@2x.svg"
+              alt="logo ohmyfood"
+              class="header__logo"
+            />
+          </h1>
         </a>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="banner">
+        <img
+          src="./Images/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+          alt="Le délice des sens"
+        />
+      </div>
+      <section class="menu">
+        <div class="menu__container">
+          <div class="menu__header">
+            <h2>Le délice des sens</h2>
+            <div class="menu__cardlike">
+              <i
+                class="fa-regular fa-heart fa-2xl menu__like"
+                aria-hidden="true"
+              ></i>
+              <i
+                class="fa-solid fa-heart fa-2xl menu__likehover"
+                aria-hidden="true"
+              ></i>
+            </div>
+          </div>
+        </div>
+        <div class="menu__listes">
+          <div class="menu__liste">
+            <h3>Entrées</h3>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Tartare de thon</h4>
+                <p class="menu__cardsubtitle">Assaisonné au yuzu</p>
+              </div>
+              <span class="menu__cardprice">25€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Bouchée de homard croustillant</h4>
+                <p class="menu__cardsubtitle">
+                  Et sa farandole de petits légumes
+                </p>
+              </div>
+              <span class="menu__cardprice">35€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">
+                  Poulet rôti aux herbes de Provence
+                </h4>
+                <p class="menu__cardsubtitle">Et sa crème de truffe</p>
+              </div>
+              <span class="menu__cardprice">20€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menu__liste">
+            <h3>Plats</h3>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">
+                  Poulet rôti aux herbes de Provence
+                </h4>
+                <p class="menu__cardsubtitle">Et sa crème de truffe</p>
+              </div>
+              <span class="menu__cardprice">40€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Langouste rôtie</h4>
+                <p class="menu__cardsubtitle">Et ses légumes de saison</p>
+              </div>
+              <span class="menu__cardprice">35€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Côte de bœuf Angus</h4>
+                <p class="menu__cardsubtitle">Et sa purée de panais</p>
+              </div>
+              <span class="menu__cardprice">44€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menu__liste">
+            <h3>Desserts</h3>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Farandole de desserts</h4>
+                <p class="menu__cardsubtitle">Du chef</p>
+              </div>
+              <span class="menu__cardprice">18€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Crème brulée</h4>
+                <p class="menu__cardsubtitle">Revisitée</p>
+              </div>
+              <span class="menu__cardprice">22€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Tiramisu</h4>
+                <p class="menu__cardsubtitle">À la noisette</p>
+              </div>
+              <span class="menu__cardprice">23€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="Commander">
+          <a href="#restaurants" class="recherche__button">
+            <span class="submittxt">Commander</span>
+          </a>
+        </div>
+      </section>
+    </main>
     <footer>
       <h2 class="footer__title">ohmyfood</h2>
       <div class="footer__link">
