--- a/À_la_française.html
+++ b/À_la_française.html
@@ -35,7 +35,143 @@
         </a>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="banner">
+        <img
+          src="./Images/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+          alt="À la française"
+        />
+      </div>
+      <section class="menu">
+        <div class="menu__container">
+          <div class="menu__header">
+            <h2>À la française</h2>
+            <div class="menu__cardlike">
+              <i
+                class="fa-regular fa-heart fa-2xl menu__like"
+                aria-hidden="true"
+              ></i>
+              <i
+                class="fa-solid fa-heart fa-2xl menu__likehover"
+                aria-hidden="true"
+              ></i>
+            </div>
+          </div>
+        </div>
+        <div class="menu__listes">
+          <div class="menu__liste">
+            <h3>Entrées</h3>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Tartare de poulpe acidulé</h4>
+                <p class="menu__cardsubtitle">Aux zestes d'orange</p>
+              </div>
+              <span class="menu__cardprice">25€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Velouté de légumes d'antan</h4>
+                <p class="menu__cardsubtitle">Carotte, panais, topinambour</p>
+              </div>
+              <span class="menu__cardprice">35€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Soupe à l'oignon</h4>
+                <p class="menu__cardsubtitle">Revisitée</p>
+              </div>
+              <span class="menu__cardprice">20€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menu__liste">
+            <h3>Plats</h3>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Coquilles Saint-Jacques</h4>
+                <p class="menu__cardsubtitle">
+                  Accompagnées d'une purée de panais
+                </p>
+              </div>
+              <span class="menu__cardprice">40€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Magret de canard</h4>
+                <p class="menu__cardsubtitle">
+                  Et parmentier de pommes de terre
+                </p>
+              </div>
+              <span class="menu__cardprice">35€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Pigeonneau d’Ille-et-Vilaine</h4>
+                <p class="menu__cardsubtitle">
+                  Sur son lit de gnocchis aux légumes
+                </p>
+              </div>
+              <span class="menu__cardprice">44€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+          </div>
+          <div class="menu__liste">
+            <h3>Desserts</h3>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Pétales de violettes glacés</h4>
+                <p class="menu__cardsubtitle">Et purée de noisettes</p>
+              </div>
+              <span class="menu__cardprice">18€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Fondant au chocolat</h4>
+                <p class="menu__cardsubtitle">Revisité</p>
+              </div>
+              <span class="menu__cardprice">22€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+            <div class="menu__platcard">
+              <div class="menu__cardcontent">
+                <h4 class="menu__cardtitle">Millefeuille croustillant</h4>
+                <p class="menu__cardsubtitle">Myrtilles et pâte d’amande</p>
+              </div>
+              <span class="menu__cardprice">23€</span>
+              <div class="menu__cardorder">
+                <i class="fas fa-check-circle list__icon menu__validation"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="Commander">
+          <a href="#restaurants" class="recherche__button">
+            <span class="submittxt">Commander</span>
+          </a>
+        </div>
+      </section>
+    </main>
     <footer>
       <h2 class="footer__title">ohmyfood</h2>
       <div class="footer__link">
