--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
       <h2 class="footer__title">ohmyfood</h2>
       <div class="footer__link">
         <div class="footerlink__icon">
-          <i class="fa-solid fa-utensils" style="color: #ffffff"></i>
+          <i class="fa-solid fa-utensils"></i>
           <a href="#" class="footer__link__a">Proposer un restaurant</a>
         </div>
         <div class="footerlink__icon">
-          <i class="fa-solid fa-handshake" style="color: #ffffff"></i>
+          <i class="fa-solid fa-handshake"></i>
           <a href="#" class="footer__link__a">Devenir partenaire</a>
         </div>
         <a href="#" class="footer__link__a">Mentions légales</a>
