--- a/À_la_française.html
+++ b/À_la_française.html
@@ -24,7 +24,7 @@
     <header>
       <div class="header">
         <a href="index.html" class="header__arrow">
-          <i class="fa-solid fa-arrow-left fa-lg" style="color: #5d5e5f"></i>
+          <i class="fa-solid fa-arrow-left fa-lg"></i>
         </a>
         <a href="index.html" class="header__logo">
           <img
@@ -176,11 +176,11 @@
       <h2 class="footer__title">ohmyfood</h2>
       <div class="footer__link">
         <div class="footerlink__icon">
-          <i class="fa-solid fa-utensils" style="color: #ffffff"></i>
+          <i class="fa-solid fa-utensils"></i>
           <a href="#" class="footer__link__a">Proposer un restaurant</a>
         </div>
         <div class="footerlink__icon">
-          <i class="fa-solid fa-handshake" style="color: #ffffff"></i>
+          <i class="fa-solid fa-handshake"></i>
           <a href="#" class="footer__link__a">Devenir partenaire</a>
         </div>
         <a href="#" class="footer__link__a">Mentions légales</a>
