fix: cleanup class names

--- a/La_note_enchantée.html
+++ b/La_note_enchantée.html
@@ -46,13 +46,13 @@
         <div class="menu__container">
           <div class="menu__header">
             <h2>La note enchantée</h2>
-            <div class="menu__cardlike">
+            <div class="restaurants__cardlike">
               <i
-                class="fa-regular fa-heart fa-2xl menu__like"
+                class="fa-regular fa-heart fa-2xl restaurants__like"
                 aria-hidden="true"
               ></i>
               <i
-                class="fa-solid fa-heart fa-2xl menu__likehover"
+                class="fa-solid fa-heart fa-2xl restaurants__likehover"
                 aria-hidden="true"
               ></i>
             </div>
@@ -61,7 +61,7 @@
         <div class="menu__listes">
           <div class="menu__liste">
             <h3>Entrées</h3>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Ravioles de foie gras</h4>
                 <p class="menu__cardsubtitle">
@@ -73,7 +73,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Caviar osciètre</h4>
                 <p class="menu__cardsubtitle">
@@ -85,7 +85,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Homard et espuma de potiron</h4>
                 <p class="menu__cardsubtitle">Marinés aux zestes d'orange</p>
@@ -95,7 +95,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Foie gras de canard cuit entier</h4>
                 <p class="menu__cardsubtitle">
@@ -110,7 +110,7 @@
           </div>
           <div class="menu__liste">
             <h3>Plats</h3>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Noix de coquilles Saint-Jacques</h4>
                 <p class="menu__cardsubtitle">
@@ -122,7 +122,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Langoustine poêlée</h4>
                 <p class="menu__cardsubtitle">Purée de patate douce</p>
@@ -132,7 +132,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Mijoté de queue de bœuf</h4>
                 <p class="menu__cardsubtitle">
@@ -147,7 +147,7 @@
           </div>
           <div class="menu__liste">
             <h3>Desserts</h3>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Macaron noisette et chocolat</h4>
                 <p class="menu__cardsubtitle">
@@ -159,7 +159,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Baba au rhum revisité</h4>
                 <p class="menu__cardsubtitle">Avec son coulis de citron</p>
@@ -169,7 +169,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Tarte au citron meringuée</h4>
                 <p class="menu__cardsubtitle">Déstructurée</p>
@@ -181,9 +181,9 @@
             </div>
           </div>
         </div>
-        <div class="Commander">
+        <div class="order">
           <a href="#restaurants" class="recherche__button">
-            <span class="submittxt">Commander</span>
+            <span>Commander</span>
           </a>
         </div>
       </section>
@@ -200,7 +200,9 @@
           <a href="#" class="footer__link__a">Devenir partenaire</a>
         </div>
         <a href="#" class="footer__link__a">Mentions légales</a>
-        <a href="mailto:ohmyfood@gmail.com" class="footer__link__a">Contact</a>
+        <a href="mailto:ohmyfood@cleryhugo.fr" class="footer__link__a"
+          >Contact</a
+        >
       </div>
     </footer>
   </body>
