--- a/Le_délice_des_sens.html
+++ b/Le_délice_des_sens.html
@@ -48,13 +48,13 @@
         <div class="menu__container">
           <div class="menu__header">
             <h2>Le délice des sens</h2>
-            <div class="menu__cardlike">
+            <div class="restaurants__cardlike">
               <i
-                class="fa-regular fa-heart fa-2xl menu__like"
+                class="fa-regular fa-heart fa-2xl restaurants__like"
                 aria-hidden="true"
               ></i>
               <i
-                class="fa-solid fa-heart fa-2xl menu__likehover"
+                class="fa-solid fa-heart fa-2xl restaurants__likehover"
                 aria-hidden="true"
               ></i>
             </div>
@@ -63,7 +63,7 @@
         <div class="menu__listes">
           <div class="menu__liste">
             <h3>Entrées</h3>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Tartare de thon</h4>
                 <p class="menu__cardsubtitle">Assaisonné au yuzu</p>
@@ -73,7 +73,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Bouchée de homard croustillant</h4>
                 <p class="menu__cardsubtitle">
@@ -85,7 +85,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">
                   Poulet rôti aux herbes de Provence
@@ -100,7 +100,7 @@
           </div>
           <div class="menu__liste">
             <h3>Plats</h3>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">
                   Poulet rôti aux herbes de Provence
@@ -112,7 +112,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Langouste rôtie</h4>
                 <p class="menu__cardsubtitle">Et ses légumes de saison</p>
@@ -122,7 +122,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Côte de bœuf Angus</h4>
                 <p class="menu__cardsubtitle">Et sa purée de panais</p>
@@ -135,7 +135,7 @@
           </div>
           <div class="menu__liste">
             <h3>Desserts</h3>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Farandole de desserts</h4>
                 <p class="menu__cardsubtitle">Du chef</p>
@@ -145,7 +145,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Crème brulée</h4>
                 <p class="menu__cardsubtitle">Revisitée</p>
@@ -155,7 +155,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Tiramisu</h4>
                 <p class="menu__cardsubtitle">À la noisette</p>
@@ -167,9 +167,9 @@
             </div>
           </div>
         </div>
-        <div class="Commander">
+        <div class="order">
           <a href="#restaurants" class="recherche__button">
-            <span class="submittxt">Commander</span>
+            <span>Commander</span>
           </a>
         </div>
       </section>
@@ -186,7 +186,9 @@
           <a href="#" class="footer__link__a">Devenir partenaire</a>
         </div>
         <a href="#" class="footer__link__a">Mentions légales</a>
-        <a href="mailto:ohmyfood@gmail.com" class="footer__link__a">Contact</a>
+        <a href="mailto:ohmyfood@cleryhugo.fr" class="footer__link__a"
+          >Contact</a
+        >
       </div>
     </footer>
   </body>
