--- a/La_palette_du_gout.html
+++ b/La_palette_du_gout.html
@@ -46,13 +46,13 @@
         <div class="menu__container">
           <div class="menu__header">
             <h2>La palette du goût</h2>
-            <div class="menu__cardlike">
+            <div class="restaurants__cardlike">
               <i
-                class="fa-regular fa-heart fa-2xl menu__like"
+                class="fa-regular fa-heart fa-2xl restaurants__like"
                 aria-hidden="true"
               ></i>
               <i
-                class="fa-solid fa-heart fa-2xl menu__likehover"
+                class="fa-solid fa-heart fa-2xl restaurants__likehover"
                 aria-hidden="true"
               ></i>
             </div>
@@ -61,7 +61,7 @@
         <div class="menu__listes">
           <div class="menu__liste">
             <h3>Entrées</h3>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Fricassée d'escargot</h4>
                 <p class="menu__cardsubtitle">Au piment d'espelette</p>
@@ -71,7 +71,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Foie gras de canard mi-cuit</h4>
                 <p class="menu__cardsubtitle">Et ses copeaux de truffe noire</p>
@@ -81,7 +81,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Œuf au plat</h4>
                 <p class="menu__cardsubtitle">
@@ -96,7 +96,7 @@
           </div>
           <div class="menu__liste">
             <h3>Plats</h3>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Filet de bœuf aux herbes</h4>
                 <p class="menu__cardsubtitle">
@@ -108,7 +108,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Parmentier de queue de bœuf</h4>
                 <p class="menu__cardsubtitle">
@@ -120,7 +120,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Filet de turbot</h4>
                 <p class="menu__cardsubtitle">Aux agrumes</p>
@@ -133,7 +133,7 @@
           </div>
           <div class="menu__liste">
             <h3>Desserts</h3>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Paris-Brest</h4>
                 <p class="menu__cardsubtitle">Revisité</p>
@@ -143,7 +143,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Macaron au chocolat d'exception</h4>
                 <p class="menu__cardsubtitle">
@@ -155,7 +155,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Mousse au chocolat</h4>
                 <p class="menu__cardsubtitle">
@@ -169,9 +169,9 @@
             </div>
           </div>
         </div>
-        <div class="Commander">
+        <div class="order">
           <a href="#restaurants" class="recherche__button">
-            <span class="submittxt">Commander</span>
+            <span>Commander</span>
           </a>
         </div>
       </section>
@@ -188,7 +188,9 @@
           <a href="#" class="footer__link__a">Devenir partenaire</a>
         </div>
         <a href="#" class="footer__link__a">Mentions légales</a>
-        <a href="mailto:ohmyfood@gmail.com" class="footer__link__a">Contact</a>
+        <a href="mailto:ohmyfood@cleryhugo.fr" class="footer__link__a"
+          >Contact</a
+        >
       </div>
     </footer>
   </body>
