--- a/À_la_française.html
+++ b/À_la_française.html
@@ -46,13 +46,13 @@
         <div class="menu__container">
           <div class="menu__header">
             <h2>À la française</h2>
-            <div class="menu__cardlike">
+            <div class="restaurants__cardlike">
               <i
-                class="fa-regular fa-heart fa-2xl menu__like"
+                class="fa-regular fa-heart fa-2xl restaurants__like"
                 aria-hidden="true"
               ></i>
               <i
-                class="fa-solid fa-heart fa-2xl menu__likehover"
+                class="fa-solid fa-heart fa-2xl restaurants__likehover"
                 aria-hidden="true"
               ></i>
             </div>
@@ -61,7 +61,7 @@
         <div class="menu__listes">
           <div class="menu__liste">
             <h3>Entrées</h3>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Tartare de poulpe acidulé</h4>
                 <p class="menu__cardsubtitle">Aux zestes d'orange</p>
@@ -71,7 +71,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Velouté de légumes d'antan</h4>
                 <p class="menu__cardsubtitle">Carotte, panais, topinambour</p>
@@ -81,7 +81,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Soupe à l'oignon</h4>
                 <p class="menu__cardsubtitle">Revisitée</p>
@@ -94,7 +94,7 @@
           </div>
           <div class="menu__liste">
             <h3>Plats</h3>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Coquilles Saint-Jacques</h4>
                 <p class="menu__cardsubtitle">
@@ -106,7 +106,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Magret de canard</h4>
                 <p class="menu__cardsubtitle">
@@ -118,7 +118,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Pigeonneau d’Ille-et-Vilaine</h4>
                 <p class="menu__cardsubtitle">
@@ -133,7 +133,7 @@
           </div>
           <div class="menu__liste">
             <h3>Desserts</h3>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Pétales de violettes glacés</h4>
                 <p class="menu__cardsubtitle">Et purée de noisettes</p>
@@ -143,7 +143,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Fondant au chocolat</h4>
                 <p class="menu__cardsubtitle">Revisité</p>
@@ -153,7 +153,7 @@
                 <i class="fas fa-check-circle list__icon menu__validation"></i>
               </div>
             </div>
-            <div class="menu__platcard">
+            <div class="menu__mealcard">
               <div class="menu__cardcontent">
                 <h4 class="menu__cardtitle">Millefeuille croustillant</h4>
                 <p class="menu__cardsubtitle">Myrtilles et pâte d’amande</p>
@@ -165,9 +165,9 @@
             </div>
           </div>
         </div>
-        <div class="Commander">
+        <div class="order">
           <a href="#restaurants" class="recherche__button">
-            <span class="submittxt">Commander</span>
+            <span>Commander</span>
           </a>
         </div>
       </section>
@@ -184,7 +184,9 @@
           <a href="#" class="footer__link__a">Devenir partenaire</a>
         </div>
         <a href="#" class="footer__link__a">Mentions légales</a>
-        <a href="mailto:ohmyfood@gmail.com" class="footer__link__a">Contact</a>
+        <a href="mailto:ohmyfood@cleryhugo.fr" class="footer__link__a"
+          >Contact</a
+        >
       </div>
     </footer>
   </body>
