fix: rename A_la_française to A_la_francaise for good practice and zip the file

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </div>
               </div>
             </a>
-            <a href="À_la_française.html" class="restaurants__link">
+            <a href="A_la_francaise.html" class="restaurants__link">
               <div class="restaurants__card">
                 <img
                   src="./Images/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
